<resources>
    <string name="app_name">ControlCash</string>

    <string name="debt">Proximamente...</string>
    <string name="bill">Movimientos</string>
    <string name="total">Totales</string>
    <string name="service">Proximamente...</string>
    <string name="settings">Configuración</string>

    <string name="select_currency">Seleccione su moneda</string>
    <string name="select_account">Seleccione su cuenta</string>
    <string name="insert_amount">Ingrese el monto</string>
    <string name="select_date">Seleccione la fecha</string>
    <string name="insert_description">Ingrese una descripción</string>
    <string name="new_bill">Nuevo gasto</string>
    <string name="add_bill">Añadir gasto</string>
    <string name="add_account">Añadir cuenta</string>

    <string name="edit_account_name">Editar nombre</string>
    <string name="delete_account_and_bills">Eliminar Cuenta</string>

    <string name="currency">Moneda</string>
    <string name="account">Cuenta</string>
    <string name="amount">Monto</string>
    <string name="date">Fecha</string>
    <string name="dialog_currency">Moneda*</string>
    <string name="dialog_account">Cuenta*</string>
    <string name="dialog_amount">Monto*</string>
    <string name="dialog_date">Fecha*</string>
    <string name="description">Descripción</string>

    <!--IMPORT & EXPORT-->
    <string name="import_description">Carga la base de datos desde un archivo externo</string>
    <string name="export_description">Guarda una copia de la base de datos</string>

    <string name="import_title">Importar</string>
    <string name="export_title">Exportar</string>

    <string name="accoutn_not_found">Cuenta no encontrada</string>
    <string name="ask_remove">¿Seguro que desea eliminar este movimiento?</string>
    <string name="warning">¡Cuidado!</string>
    <string name="delete">Eliminar</string>
    <string name="cancel">Cancelar</string>
    <string name="to_continue">Continuar ></string>
    <string name="save">Guardar</string>
    <string name="delete_account_title">Eliminar Cuenta</string>
    <string name="dark_mode">Modo oscuro</string>
    <string name="dark_mode_description">Activa el modo oscuro para un cambio visual</string>


    <!--PIN-->
    <string name="pin_saved">PIN guardado correctamente</string>
    <string name="pin_error">Error al guardar el PIN</string>
    <string name="pin_more_four">El PIN debe tener 4 o más dígitos</string>
    <string name="pin_wrong">PIN incorrecto</string>
    <string name="change_pin">Cambiar PIN</string>
    <string name="change_pin_title">Ingrese su nuevo PIN</string>
    <string name="confirm_pin">Ingrese su PIN actual</string>
    <string name="change_pin_description">Cambia el PIN actual por uno nuevo</string>
    <string name="configure_pin">Cree un PIN</string>
    <string name="write_pin">Ingrese su PIN</string>
    <string name="forgot_pin">¿Olvidaste tu PIN?</string>

    <!--MONEDAS-->
    <string name="ars">ARS</string>
    <string name="usd">USD</string>
    <string name="usdt">USDT</string>
    <string name="usdc">USDC</string>
    <string name="dai">DAI</string>

    <!--Toast-->
    <string name="export_success">Base de datos exportada con éxito</string>
    <string name="export_error">Error al exportar la base de datos</string>
    <string name="select_database">Selecciona la base de datos</string>
    <string name="import_complete">Importanción de la base de datos completa</string>
    <string name="import_success">La base de datos fue importada correctamente</string>
    <string name="import_error">Error al importar la base de datos</string>
    <string name="invalid_pin">Pin incorrecto</string>
    <string name="security_question_not_found">No hay pregunta de seguridad configurada</string>
    <string name="restore_pint">Recuperar PIN</string>
    <string name="accept">Aceptar</string>
    <string name="insert_new_pin">Respuesta correcta. Ingresá un nuevo PIN.</string>
    <string name="new_pin">Configurar nuevo PIN</string>
    <string name="incorrect_answer">Respuesta incorrecta</string>
    <string name="example">¿Cómo se llama tu mascota?</string>
    <string name="answer">Respuesta</string>
    <string name="new_question">Configurar pregunta de seguridad</string>cro
    <string name="complete_spaces">Ambos campos son obligatorios</string>


</resources>