<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@color/primaryDark"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Todo tu contenido igual que antes -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_account"
            android:textColor="@color/white" />

        <AutoCompleteTextView
            android:id="@+id/acAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_account"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/colorHint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_currency"
            android:textColor="@color/white" />

        <AutoCompleteTextView
            android:id="@+id/acCurrency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_currency"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/colorHint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_amount"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/edAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insert_amount"
            android:inputType="numberDecimal|numberSigned"
            android:textColor="@color/white"
            android:textColorHint="@color/colorHint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_date"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/edDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:hint="@string/select_date"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/colorHint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/edDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insert_description"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/colorHint" />

        <Button
            android:id="@+id/btnAddBill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/secondary"
            android:text="@string/add_bill"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>
</ScrollView>
